@@ -3,6 +3,8 @@ Changelog
 
 1.17-dev - (unreleased)
 -----------------------
+ * Change: changed Specification.has_unique_code in Specification.has_duplicated_code
+ * Featured: Added view @@ims_wrong_specification_versions page [tiberich #3775]
 
 1.16 - (2010-10-18)
 -------------------
